java 17. code cleanup.